--- a/pages/yiguo/list/list.wxml
+++ b/pages/yiguo/list/list.wxml
@@ -14,13 +14,13 @@
     <swiper-item>
       <scroll-view scroll-y="true" class="scroll-box">
          <view class="list-view" >
-           <view class="list-box" wx:for="{{listgoods}}" wx:for-item="list" wx:key="index" data-id="{{list.id}}" bindtap="lookdetail">
-              <view class="list-images" ><image src="{{list.pic_url}}" /></view>
+           <view class="list-box" wx:for="{{listgoods}}" wx:for-item="list" wx:key="index" data-id="{{list.ID}}" bindtap="lookdetail">
+              <view class="list-images" ><image src="{{list.Pic_url}}" /></view>
               <view class="list-text">
-                  <text class="name">{{list.name}}</text>
+                  <text class="name">{{list.Name}}</text>
                   <view class="txt">
-                      <text class="price">{{list.price}}</text>
-                      <text class="type">{{list.type}}</text>
+                      <text class="price">{{list.Price}}</text>
+                      <text class="type">{{list.Memo}}</text>
                   </view>
               </view>
            </view>
@@ -32,12 +32,12 @@
     	<scroll-view scroll-y="true" class="scroll-box">
          <view class="list-view" >
            <view class="list-box" wx:for="{{listgoods}}" wx:for-item="list" wx:key="index">
-              <view class="list-images"><image src="{{list.pic_url}}" /></view>
+              <view class="list-images"><image src="{{list.Pic_url}}" /></view>
               <view class="list-text">
-                  <text class="name">{{list.name}}</text>
+                  <text class="name">{{list.Name}}</text>
                   <view class="txt">
-                      <text class="price">{{list.price}}</text>
-                      <text class="type">{{list.type}}</text>
+                      <text class="price">{{list.Price}}</text>
+                      <text class="type">{{list.Memo}}</text>
                   </view>
               </view>
            </view>
@@ -49,12 +49,12 @@
     	<scroll-view scroll-y="true" class="scroll-box">
          <view class="list-view" >
            <view class="list-box" wx:for="{{listgoods}}" wx:for-item="list" wx:key="index">
-              <view class="list-images"><image src="{{list.pic_url}}" /></view>
+              <view class="list-images"><image src="{{list.Pic_url}}" /></view>
               <view class="list-text">
-                  <text class="name">{{list.name}}</text>
+                  <text class="name">{{list.Name}}</text>
                   <view class="txt">
-                       <text class="price">{{list.price}}</text>
-                      <text class="type">{{list.type}}</text>
+                       <text class="price">{{list.Price}}</text>
+                      <text class="type">{{list.Memo}}</text>
                   </view>
               </view>
            </view>
