--- a/pages/yiguo/detail/detail.wxml
+++ b/pages/yiguo/detail/detail.wxml
@@ -2,14 +2,14 @@
 
     <view class="detail-list">
         <scroll-view scroll-y="true" style="height: 100%;">
-            <view><image src="{{detailgood.pic_url}}"></image></view>
+            <view><image src="{{detailgood.Pic_url}}"></image></view>
             <view class="detail-name">
                 <ul>
-                    <li>{{detailgood.name}}</li>
-                    <li>{{detailgood.price}}</li>
-                    <li>规格 {{detailgood.type}}</li>
-                    <li>信息 产地：泰国 发货地: 结单时间：20:00</li>
-                    <li>用户评价（31）</li>
+                    <li>{{detailgood.Name}}</li>
+                    <li>价格 {{detailgood.Price}} 元</li>
+                    <li>规格 {{detailgood.Specs}}</li>
+                    <li>信息 {{detailgood.Memo}}</li>
+                    <li>用户评价（{{detailgood.ReviewsCounts}}）</li>
                     <li>商品图文详情（建议在WIFI下查看）</li>
                 </ul>
             </view>
@@ -19,7 +19,7 @@
             <view class="hot-title">热门推荐</view>
                     <view class='hot-gooditem'>
                         <view class='hot-imgview' wx:key="index"  wx:for="{{hotgoods}}" wx:for-index="idx" wx:for-item="hot">
-                        <image class='hot-product' src='{{hot.more_pic}}'/>
+                        <image class='hot-product' src='{{hot.Pic_url}}'/>
                         </view>
                     </view>
 </view>
